--- a/IEEE_EMB/IEEE_EMB/Pages/Admin/AllMembers.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Admin/AllMembers.cshtml
@@ -22,7 +22,6 @@
                         <th>Email</th>
                         <th>University</th>
                         <th>Status</th>
-                        
                         <th>Actions</th>
 
                     </tr>
@@ -46,7 +45,7 @@
                                                 Accept
                                             </button>
                                             <div class="divider"></div>
-                                            <button type="submit" name="status" value="@Status.Approved" class="button-half decline-half">
+                                            <button type="submit" name="status" value="@Status.Rejected" class="button-half decline-half">
                                                 <span class="icon">✕</span>
                                                 Decline
                                             </button>
