--- a/IEEE_EMB/IEEE_EMB/Pages/Admin/DashBoard.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Admin/DashBoard.cshtml
@@ -79,7 +79,7 @@
         </div>
         <div class="col-xl-6 col-md-6">
             <div class="chart-container">
-                <div class="chart-title">Lecture Enrollment Distribution</div>
+                <div class="chart-title">Activties Distribution</div>
                 <canvas id="TopActivities"></canvas>
             </div>
         </div>
