--- a/IEEE_EMB/IEEE_EMB/Pages/ActivityDetails.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/ActivityDetails.cshtml
@@ -32,14 +32,18 @@
                   @*   <th>Status</th> *@
                     <th>Action</th>
                 </tr>
-                @for(int i = 0; i < Model.activity.Rows.Count; i++){
+                @if (Model.activity.Rows[0]["SessionId"] != DBNull.Value)
+                {
+                for(int i = 0; i < Model.activity.Rows.Count; i++){
                 <tr>
                     <td>@Model.activity.Rows[i]["SessionTitle"]</td>
                     <td>@Model.activity.Rows[i]["DATE"]</td>
                    @*  <td><span class="badge badge-success">Completed</span></td> *@
                    @*  <td><span class="badge badge-warning">Upcoming</span></td> *@
+                   
                     <td><a asp-page="/SessionDetails" asp-route-SessionId="@Model.activity.Rows[i]["SessionId"]">View Details</a></td>
                 </tr>
+                }
                 }
             </table>
         </div>
