--- a/IEEE_EMB/IEEE_EMB/Pages/Admin/AddMember.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Admin/AddMember.cshtml
@@ -89,8 +89,8 @@
                     <label for="Status" class="control-label">Status</label>
                     <select asp-for="@Model.member.status" class="form-control">
                         <option value="">Select Status</option>
-                        <option value="@Status.Approved">Active</option>
-                        <option value="@Status.Waiting">Inactive</option>
+                        <option value="@Status.Approved">Approved</option>
+                        <option value="@Status.Waiting">Waiting</option>
                     </select>
                 </div>
 
