--- a/IEEE_EMB/IEEE_EMB/Pages/Admin/AllMentors.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Admin/AllMentors.cshtml
@@ -46,7 +46,7 @@
                                                 Accept
                                             </button>
                                             <div class="divider"></div>
-                                            <button type="submit" name="status" value="@Status.Approved" class="button-half decline-half">
+                                            <button type="submit" name="status" value="@Status.Rejected" class="button-half decline-half">
                                                 <span class="icon">✕</span>
                                                 Decline
                                             </button>
