--- a/IEEE_EMB/IEEE_EMB/Pages/Workshops.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Workshops.cshtml
@@ -179,10 +179,10 @@
                                             break;
                                         }
                                     }
-                                    if (exists || HttpContextAccessor.HttpContext.Session.GetString("AuthenticationString") == "Member")
+                                    if (exists || HttpContextAccessor.HttpContext.Session.GetString("AuthenticationString") == "Member" || HttpContextAccessor.HttpContext.Session.GetString("AuthenticationString") == "Admin")
 
                                     {
-                                        <a asp-page="/DetailsPage" asp-route-activityId="@activity.Id" class="btn btn-outline-secondary flex-grow-1">
+                                        <a asp-page="/ActivityDetails" asp-route-activityId="@activity.Id" class="btn btn-outline-secondary flex-grow-1">
                                             Details
                                         </a>
                                     }
